# docs/swagger.json
@@ -9,6 +9,29 @@
     "host": "localhost:8000",
     "basePath": "/",
     "paths": {
+        "/change-password": {
+            "patch": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "ChangePassword",
+                "parameters": [
+                    {
+                        "description": "Change Password payload",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.ChangePasswordPayload"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/login": {
             "post": {
                 "produces": [
@@ -26,15 +49,6 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/requests.UserPayload"
-                        }
-                    },
-                    {
-                        "description": "Another payload",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/requests.AnotherPayload"
                         }
                     }
                 ],
@@ -78,16 +92,20 @@
         }
     },
     "definitions": {
-        "requests.AnotherPayload": {
+        "requests.ChangePasswordPayload": {
             "type": "object",
             "properties": {
                 "email": {
                     "type": "string",
                     "example": "john.doe@mail.com"
                 },
-                "password": {
+                "new_password": {
                     "type": "string",
-                    "example": "password"
+                    "example": "password2"
+                },
+                "old_password": {
+                    "type": "string",
+                    "example": "password1"
                 }
             }
         },
